@@ -4,6 +4,11 @@
 
 2004-02-10  James Henstridge  <james@daa.com.au>
 
+	* jhbuild/commands/sanitycheck.py (do_sanitycheck): add XML
+	catalog checks to sanitycheck.
+	(do_sanitycheck): check for various
+	(do_sanitycheck): check if db2html exists.
+
 	* modulesets/freedesktop.modules (xcompmgr): add dependency on
 	Xrender.
 
